--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,8 @@ header {
     width: 100%;
     margin: 1vh;
     margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
     background: rgb(175,0,0);
     text-align: center;
     border-radius: 10px 0 10px 0;
