mnóstwo rzeczy generalnie

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,15 @@
 }
 
 /* elementy wyśrodkowujące zawartość */
-.main, .content {
+.main, .content, main, form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+main {
+    height: 80%;
 }
 
 body {
