--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@
 
 main {
     height: 80%;
+    background-color: aquamarine;
+}
+
+td > img {
+    width: 150px;
+    height: 150px;
+    border-radius: 25px;
 }
 
 body {
