--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,9 @@ body {
 }
 
 .content {
-    background-color: #ADD8E6 ; /* ten kolor do zmiany */
+    background-color: rgb(173,216,230);
+    background-image:linear-gradient(90deg, rgba(173,216,230,1) 12%, rgba(157,135,255,1) 66%, rgba(0,212,255,1) 100%) ;
     padding: 1%;
     border-radius: 2%;
+    border: solid pink;
 }
