--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,13 @@
 }
 
 main {
+    margin: 0 auto;
+    width: 65%;
     height: 80%;
-    background-color: aquamarine;
+    background-color: rgb(255,255,255);
+    background-image: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,0,0,1) 84%);
 }
+
 
 td > img {
     width: 150px;
